@@ -1451,7 +1451,6 @@ cb_build_program (struct cb_program *last_program, const int nest_level)
 	cb_reset_78 ();
 	cobc_in_procedure = 0;
 	cobc_in_repository = 0;
-	cobc_cs_check = 0;
 	cb_clear_real_field ();
 
 	p = cobc_parse_malloc (sizeof (struct cb_program));
