@@ -70,6 +70,33 @@ AT_CHECK([$COMPILE_ONLY prog.cob], [1], ,
 
 AT_CLEANUP
 
+
+AT_SETUP([INITIAL/RECURSIVE before COMMON])
+AT_KEYWORDS([PROGRAM-ID definition])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      containing-prog.
+
+       PROCEDURE        DIVISION.
+
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog-1 IS INITIAL COMMON.
+       PROCEDURE        DIVISION.
+           STOP RUN.
+       END PROGRAM      prog-1.
+
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog-2 IS RECURSIVE COMMON.
+       PROCEDURE        DIVISION.
+           STOP RUN.
+       END PROGRAM      prog-2.
+])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [0], [], [])
+
+AT_CLEANUP
+
 ###
 ### Data name
 ###
